--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -1,10 +1,10 @@
 .photo-list__item {
   margin: 24px;
-  padding: 8px;
+  padding: 1em;
   border-width: 0.5px;
   border-color: lightgray;
   border-style: solid;
-  border-radius: 8px;
+  border-radius: 1.5em;
   max-width: fit-content;
 }
 
