display selected image details

--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -32,6 +32,7 @@
 .photo-details-modal__image {
   max-width: 95%;
   border-radius: 8px;
+  margin: 20px;
 }
 
 .photo-details-modal__top-bar {
@@ -46,6 +47,7 @@
 .photo-details-modal__photographer-details {
   display: flex;
   font-size: 16px;
+  margin: 0 20px;
 }
 
 .photo-details-modal__header {
