--- a/frontend/src/styles/FavBadge.scss
+++ b/frontend/src/styles/FavBadge.scss
@@ -15,7 +15,7 @@ height: 20px;
 
   span {
     text-align: center;
-    color: white;
+    color: rgb(181, 0, 0);
     width: 100%;
     font-weight: 500;
     position: absolute;
@@ -23,8 +23,6 @@ height: 20px;
   }
 }
 
-.fav-icon {
-  width: 20px;
-  height: 20px;
+.fav-badge .fav-icon {
   fill: red;
 }
