--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -10,7 +10,7 @@
   height: 72px;
 }
 
-.top-nav-bar__logo {
+.top-nav-bar__logo, a {
   text-decoration: overline;
   font-weight: 500;
   font-size: 24px;
@@ -18,3 +18,4 @@
   text-underline-position: auto;
   margin-left: 24px;
 }
+
