--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -54,13 +54,14 @@
   font-size: 18px;
   font-weight: 500;
   color: #1e1e1e;
-  margin-top: 24px;
-  margin-bottom: 24px;
+  margin: 25px 0 0 25px;
   width: 90%;
 }
 
 .photo-details-modal__photographer-location {
   color: #838383;
+  margin-left: 8px;
+  font-size: 12px;
 }
 .photo-details-modal__photographer-profile {
   object-fit: cover;
