--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -35,10 +35,11 @@
 
 .photo-list__user-details {
   display: flex;
+  margin: 5px 0 0 5px;
+  padding: 0px;
 }
 
 .photo-list__user-info {
-  margin-top: 5px;
   font-weight: 700;
   font-size: 12px;
   margin-left: 8px;
@@ -46,5 +47,6 @@
 
 .photo-list__user-location {
   color: #838383;
+  font-size: 12px;
   margin-left: 8px;
 }
