--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -2,11 +2,11 @@
   background-color: white;
   box-shadow: 0 0 0 50vmax rgba(0,0,0,.5);
   position: absolute;
-  top: 55%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -40%);
-  height: 80%;
-  width: 55%;
+  height: 75%;
+  width: 70%;
   overflow-y: scroll;
   border-radius: 12px;
 }
@@ -24,30 +24,34 @@
   margin-top: 16px;
 }
 
-.photo-details-modal__images {
-  margin-left: 36px;
-  margin-top: 8px;
+.photo-details-modal_image-holder {
+  display: flex;
+  justify-content: center; 
 }
 
 .photo-details-modal__image {
-  max-width: 95%;
-  border-radius: 8px;
-  margin: 20px;
+  max-width: 70%;
+  margin: 0 20px;
 }
 
-.photo-details-modal__top-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 16px;
-  margin-top: 8px;
-  align-items: center;
+.photo-details-modal__top-bar ul.photo-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(450px, 0fr));
+    gap: 8px;
+    list-style-type: none;
+    margin: 0 0 20px 20px;
+    padding: 0;
 }
+
+
 
 .photo-details-modal__photographer-details {
   display: flex;
+  width: 95%;
   font-size: 16px;
-  margin: 0 20px;
+  padding-bottom: 24px;
+  margin: 20px;
+  border-bottom: solid 1px #d2d2d2;
 }
 
 .photo-details-modal__header {
@@ -68,8 +72,8 @@
   border-radius: 100%;
   vertical-align: middle;
   margin-right: 8px;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
 }
 
 .photo-details-modal__photographer-info {
